# mbtserver

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  mbtserver.pc.in  mbtserver.spec
.github/workflows/: mbtserver.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
debian/: NEWS.debian  TODO  changelog  control  copyright
docs/: Makefile.am  Makefile.in  MbtServer.1  mbtserver.1
example/: Makefile.in
fink/: mbtserver.info
include/: Makefile.am
include/mbtserver/: Makefile.am  MbtServerBase.h
init/: Makefile.am  mbtserver.in
src/: Makefile.am  MbtJSONServerBase.cxx  MbtServer.cxx  MbtServerBase.cxx
